tests/NormalTests/paczka1/fuzzy1/66134855.err
Error in line 3: 0ujGVi A973 71,0
Error in line 6: 0ujGVi A153 76,4
Error in line 8: hgnCnVb3 A27 79,2
Error in line 17: Zl2k6Uv A153 88,5
Error in line 25: PMVOvgm A973 1,5
Error in line 22: Zl2k6Uv S344 103,3
Error in line 38: Zl2k6Uv A973 20,2
